new Vue template 函数式

--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "@types/pixi.js": "^4.7.5",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
+    "crypto": "^1.0.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.1",
     "pixi-sound": "^2.0.2",
