--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "@types/pixi.js": "^4.7.5",
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
-    "crypto": "^1.0.1",
     "mint-ui": "^2.2.13",
     "moment": "^2.22.1",
     "pixi-sound": "^2.0.2",
@@ -69,7 +68,7 @@
     "vue": "^2.5.3",
     "vue-croppa": "^1.3.6",
     "vue-router": "^3.0.1",
-    "vue-socket.io": "^2.1.1-b",
+    "vue-socket.io": "^2.1.1",
     "vuex": "^3.0.1"
   }
 }
