--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "cross-env NODE_ENV='production' webpack --config build/webpack.prod.config.js --mode production --report",
     "dev": "cross-env NODE_ENV='development' webpack-dev-server --config build/webpack.dev.config.js --mode development --hot",
     "dll": "webpack --config build/webpack.dll.config.js --mode development",
+    "start": "npm run dll && npm run dev",
     "serve": "http-server ./dist -o"
   },
   "keywords": [
