--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "cross-env NODE_ENV='production' webpack --config build/webpack.prod.config.js --mode production --report",
-    "dev": "cross-env NODE_ENV='development' webpack-dev-server --config build/webpack.dev.config.js --mode development --hot",
+    "dev": "cross-env NODE_ENV='development' webpack-dev-server --config build/webpack.dev.config.js --mode development --hot --port 9999",
     "dll": "webpack --config build/webpack.dll.config.js --mode development",
     "start": "npm run dll && npm run dev",
     "serve": "http-server ./dist -o"
